Some cleaning in the QR code. Use toBlob method when available (only Firefox supports it for now). Fix %MD5 sauces.

--- a/css/style.css
+++ b/css/style.css
@@ -593,7 +593,7 @@ a[href="javascript:;"] {
   min-height: 160px;
   min-width: 100%;
 }
-#qr.captcha textarea.field {
+#qr.has-captcha textarea.field {
   min-height: 120px;
 }
 .textarea {
