--- a/css/style.css
+++ b/css/style.css
@@ -604,8 +604,15 @@ a[href="javascript:;"] {
   vertical-align: bottom;
 }
 #addReply {
-  font-size: 3.5em;
-  line-height: 100px;
+  display: inline-block;
+  font-size: 30px;
+  height: 30px;
+  width: 30px;
+  line-height: 1;
+  text-align: center;
+  position: absolute;
+  right: 0; bottom: 0;
+  z-index: 1;
 }
 #qr textarea {
   min-height: 160px;
