Style the dump list scrollbar for WebKit browsers.

--- a/css/burichan.css
+++ b/css/burichan.css
@@ -26,6 +26,10 @@
 }
 
 /* QR */
+.burichan #dump-list::-webkit-scrollbar-thumb {
+  background-color: #D6DAF0;
+  border-color: #B7C5D9;
+}
 :root.burichan .qrpreview {
   background-color: rgba(0, 0, 0, .15);
 }
