--- a/css/futaba.css
+++ b/css/futaba.css
@@ -26,6 +26,10 @@
 }
 
 /* QR */
+.futaba #dump-list::-webkit-scrollbar-thumb {
+  background-color: #F0E0D6;
+  border-color: #D9BFB7;
+}
 :root.futaba .qrpreview {
   background-color: rgba(0, 0, 0, .15);
 }
