--- a/css/tomorrow.css
+++ b/css/tomorrow.css
@@ -26,6 +26,10 @@
 }
 
 /* QR */
+.tomorrow #dump-list::-webkit-scrollbar-thumb {
+  background-color: #282A2E;
+  border-color: #111;
+}
 :root.tomorrow .qrpreview {
   background-color: rgba(255, 255, 255, .15);
 }
