--- a/css/yotsuba-b.css
+++ b/css/yotsuba-b.css
@@ -26,6 +26,10 @@
 }
 
 /* QR */
+.yotsuba-b #dump-list::-webkit-scrollbar-thumb {
+  background-color: #D6DAF0;
+  border-color: #B7C5D9;
+}
 :root.yotsuba-b .qrpreview {
   background-color: rgba(0, 0, 0, .15);
 }
