--- a/css/yotsuba-b.css
+++ b/css/yotsuba-b.css
@@ -30,7 +30,7 @@
   background-color: #D6DAF0;
   border-color: #B7C5D9;
 }
-:root.yotsuba-b .qrpreview {
+:root.yotsuba-b .qr-preview {
   background-color: rgba(0, 0, 0, .15);
 }
 
