--- a/css/futaba.css
+++ b/css/futaba.css
@@ -30,7 +30,7 @@
   background-color: #F0E0D6;
   border-color: #D9BFB7;
 }
-:root.futaba .qrpreview {
+:root.futaba .qr-preview {
   background-color: rgba(0, 0, 0, .15);
 }
 
