--- a/css/tomorrow.css
+++ b/css/tomorrow.css
@@ -36,7 +36,7 @@
 :root.tomorrow #qr option {
   color: #000;
 }
-:root.tomorrow .qrpreview {
+:root.tomorrow .qr-preview {
   background-color: rgba(255, 255, 255, .15);
 }
 
