--- a/css/yotsuba.css
+++ b/css/yotsuba.css
@@ -30,7 +30,7 @@
   background-color: #F0E0D6;
   border-color: #D9BFB7;
 }
-:root.yotsuba .qrpreview {
+:root.yotsuba .qr-preview {
   background-color: rgba(0, 0, 0, .15);
 }
 
