Prevent a post from being manipulated when uploading it.

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@
 .field:hover, .field:focus {
   color: #000;
 }
+.field[disabled] {
+  background-color: #F2F2F2;
+  color: #888;
+}
 .move {
   cursor: move;
 }
