Add Custom CSS ricing. #932

--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,9 @@ a[href="javascript:;"] {
 .section-sauce textarea {
   height: 350px;
 }
+.section-rice textarea {
+  height: 150px;
+}
 #fourchanx-settings textarea {
   font-family: monospace;
   min-width: 100%;
