--- a/css/style.css
+++ b/css/style.css
@@ -250,14 +250,12 @@ a[href="javascript:;"] {
   left: 0;
   overflow: auto;
 }
-.section-main ul,
 .section-sauce ul,
 .section-rice ul {
   list-style: none;
   margin: 0;
   padding: 8px;
 }
-.section-main li,
 .section-sauce li,
 .section-rice li {
   padding-left: 4px;
@@ -279,6 +277,13 @@ a[href="javascript:;"] {
 }
 .section-rice textarea {
   height: 150px;
+}
+#fourchanx-settings fieldset {
+  border: 1px solid;
+  border-radius: 3px;
+}
+#fourchanx-settings legend {
+  font-weight: 700;
 }
 #fourchanx-settings textarea {
   font-family: monospace;
