Make the QR filename open the file input dialog. #932

--- a/css/style.css
+++ b/css/style.css
@@ -690,6 +690,7 @@ a[href="javascript:;"] {
   flex: 1;
 }
 #qr-filename-container {
+  cursor: default;
   position: relative;
   margin-left: 2px;
 }
