Add the unread line. Scroll to the last read post on load. #932

--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,11 @@ a[href="javascript:;"] {
   overflow: hidden;
 }
 
+/* Unread */
+#unread-line {
+  margin: 0;
+}
+
 /* Thread Updater */
 #updater:not(:hover) {
   background: none;
