--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ a[href="javascript:;"] {
   color: white;
 }
 .notification > .close {
-  padding: 4px 6px;
+  padding: 6px;
   top: 0;
   right: 0;
   position: absolute;
@@ -184,7 +184,7 @@ a[href="javascript:;"] {
 .message {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 4px 20px;
+  padding: 6px 20px;
   max-height: 200px;
   width: 100%;
   overflow: auto;
