--- a/css/burichan.css
+++ b/css/burichan.css
@@ -45,6 +45,7 @@
 }
 :root.burichan .entry {
   border-bottom: 1px solid #B7C5D9;
+  font-size: 12pt;
 }
 :root.burichan .focused.entry {
   background: rgba(255, 255, 255, .33);
