--- a/css/futaba.css
+++ b/css/futaba.css
@@ -45,6 +45,7 @@
 }
 :root.futaba .entry {
   border-bottom: 1px solid #D9BFB7;
+  font-size: 12pt;
 }
 :root.futaba .focused.entry {
   background: rgba(255, 255, 255, .33);
