--- a/css/photon.css
+++ b/css/photon.css
@@ -45,6 +45,7 @@
 }
 :root.photon .entry {
   border-bottom: 1px solid #CCC;
+  font-size: 10pt;
 }
 :root.photon .focused.entry {
   background: rgba(255, 255, 255, .33);
