--- a/css/tomorrow.css
+++ b/css/tomorrow.css
@@ -51,6 +51,7 @@
 }
 :root.tomorrow .entry {
   border-bottom: 1px solid #111;
+  font-size: 10pt;
 }
 :root.tomorrow .focused.entry {
   background: rgba(0, 0, 0, .33);
