--- a/css/style.css
+++ b/css/style.css
@@ -736,7 +736,7 @@ a[href="javascript:;"] {
   display: inline-block;
   position: relative;
 }
-.menu-button > span {
+.menu-button i {
   border-top:   6px solid;
   border-right: 4px solid transparent;
   border-left:  4px solid transparent;
@@ -761,11 +761,6 @@ a[href="javascript:;"] {
   position: relative;
   text-decoration: none;
   white-space: nowrap;
-  /* XXX firefox fix */
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
 }
 .entry.has-submenu {
   padding-right: 20px;
