Move the QR and Expand All Images out of the Header's menu, right next to the menu button. #932

--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,12 @@ a[href="javascript:;"] {
   text-decoration: none;
   padding: 1px;
 }
+#shortcuts:empty {
+  display: none;
+}
+.shortcut:not(:last-child)::after {
+  content: " / ";
+}
 .brackets-wrap::before {
   content: " [";
 }
