--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,9 @@ a[href="javascript:;"] {
 .brackets-wrap::after {
   content: "]\\00a0";
 }
+.expand-all-shortcut {
+  opacity: .35;
+}
 
 /* Notifications */
 #notifications {
