--- a/css/style.css
+++ b/css/style.css
@@ -148,8 +148,9 @@ a[href="javascript:;"] {
 .brackets-wrap::after {
   content: "]\\00a0";
 }
+.disabled,
 .expand-all-shortcut {
-  opacity: .35;
+  opacity: .45;
 }
 
 /* Notifications */
