--- a/css/style.css
+++ b/css/style.css
@@ -429,7 +429,7 @@ a[href="javascript:;"] {
   max-height: 300px;
   max-width: 500px;
 }
-.qphl {
+.qphl > .post {
   outline: 2px solid rgba(216, 94, 49, .7);
 }
 
