The watcher doesn't need the `position: fixed;` property. #968

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ a[href="javascript:;"] {
 #qp, #ihover,
 #updater, #thread-stats,
 #navlinks, #header,
-#qr, #watcher {
+#qr {
   position: fixed;
 }
 #overlay {
