Bold the current tab in the settings. #968

--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,9 @@ a[href="javascript:;"] {
   -webkit-flex: 1;
   flex: 1;
 }
+.tab-selected {
+  font-weight: 700;
+}
 .section-container {
   -webkit-flex: 1;
   flex: 1;
