--- a/css/style.css
+++ b/css/style.css
@@ -761,6 +761,7 @@ a[href="javascript:;"] {
   margin: 0 2px;
 }
 #file-n-submit input[type='submit'] {
+  min-width: 40px;
   -webkit-order: 1;
   order: 1;
 }
