--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
   margin: 0;
   padding: 2px 4px 3px;
   outline: none;
+  transition: color .25s, border-color .25s, -webkit-flex .25s;
   transition: color .25s, border-color .25s, flex .25s;
 }
 .field::-moz-placeholder,
