--- a/css/style.css
+++ b/css/style.css
@@ -497,8 +497,9 @@ a[href="javascript:;"] {
 }
 
 /* QR */
-.hide-original-post-form #postForm,
-.hide-original-post-form .postingMode,
+:root.hide-original-post-form #postForm,
+:root.hide-original-post-form .postingMode,
+:root.hide-original-post-form #togglePostForm,
 #qr.autohide:not(:hover) > form {
   display: none;
 }
