Move the qphl class back to the post instead of the postContainer. It's the source of performance issues when quote previewing in large threads.

--- a/css/style.css
+++ b/css/style.css
@@ -432,7 +432,7 @@ a[href="javascript:;"] {
   max-height: 300px;
   max-width: 500px;
 }
-.qphl > .post {
+.qphl {
   outline: 2px solid rgba(216, 94, 49, .7);
 }
 
